frontend/test/should_fail/dominik.grg
pattern gnodes(var counter:int)
{
    alternative {
        Base {
            if { counter==0; }
          modify {}
        }
        Step {
            if { true; }
            sub:gnodes(counter-1);
            modify {
                sub();
            }
        }
    }
    modify {}
} 
